--- a/index.html
+++ b/index.html
@@ -1,12 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>Title</title>
-	<link rel="stylesheet" href="../dist/css/custom.css">
-	<script type="text/javascript" src="../dist/js/app.js"></script>
-</head>
-<body>
+	<head>
+		<meta charset="UTF-8">
+		<title>Title</title>
+		<link rel="stylesheet" href="./dist/css/custom.css">
+		<script type="text/javascript" src="./dist/js/app.js"></script>
+	</head>
+	<body class="bg-light">
 
-</body>
+	<div class="container">
+		<div class="py-1 text-center">
+			<h2>DEMO</h2>
+			<p class="lead">modalを使いこなす</p>
+		</div>
+
+		<div class="row">
+			<div class="col-md-12 order-md-1">
+				<form class="needs-validation">
+
+					<div class="row mb-3">
+
+						<div class="col-md-6">
+							<label for="firstName">First name</label>
+							<input type="text" class="form-control" id="firstName" placeholder="" value="">
+						</div>
+
+						<div class="col-md-6">
+							<label for="lastName">Last name</label>
+							<input type="text" class="form-control" id="lastName" placeholder="" value="">
+						</div>
+
+					</div>
+
+
+					<div class="row mb-1">
+
+						<div class="col-md-12">
+
+							<!-- Button trigger modal -->
+							<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+								Launch demo modal
+							</button>
+
+							<!-- Modal -->
+							<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+								<div class="modal-dialog" role="document">
+									<div class="modal-content">
+
+										<div class="modal-header">
+											<h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+											<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+												<span aria-hidden="true">&times;</span>
+											</button>
+										</div>
+
+										<div class="modal-body">
+
+											<label for="aaa">aaa</label>
+											<input type="text" class="form-control" id="aaa" placeholder="" value="">
+
+
+											<label for="bbb">bbb</label>
+											<input type="text" class="form-control" id="bbb" placeholder="" value="">
+
+										</div>
+
+										<div class="modal-footer">
+											<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+											<button type="button" class="btn btn-primary">Save changes</button>
+										</div>
+									</div>
+								</div>
+							</div>
+
+						</div>
+
+					</div>
+
+
+				</form>
+			</div>
+		</div>
+
+		<footer class="my-5 pt-1 text-muted text-center text-small">
+			<p class="mb-1">&copy; 2018 wakaba-bbq</p>
+		</footer>
+	</div>
+	</body>
 </html>
